--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>com.almostrealism</groupId>
+	<groupId>org.almostrealism</groupId>
 	<artifactId>Ichos</artifactId>
 	<packaging>pom</packaging>
 	<version>1.0</version>
@@ -21,16 +21,10 @@
 		</plugins>
 	</build>
 	<modules>
-		<module>ar-audio</module>
+		<module>audio</module>
 	</modules>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.almostrealism</groupId>
-			<artifactId>OptimalZoo</artifactId>
-			<version>0.5</version>
-		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
