--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>org.almostrealism</groupId>
 	<artifactId>Ichos</artifactId>
 	<packaging>pom</packaging>
-	<version>1.2</version>
+	<version>1.3</version>
 	
     <build>
 		<plugins>
@@ -14,6 +14,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 				<configuration>
+					<compilerArgs>
+						<arg>-h</arg>
+						<arg>target/headers</arg>
+					</compilerArgs>
 					<source>11</source>
 					<target>11</target>
 				</configuration>
