--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
+	<properties>
+		<common.version>0.42</common.version>
+		<ichos.version>1.30</ichos.version>
+	</properties>
+
 	<groupId>org.almostrealism</groupId>
 	<artifactId>Ichos</artifactId>
 	<packaging>pom</packaging>
-	<version>1.29</version>
-	
+	<version>${ichos.version}</version>
+
     <build>
 		<plugins>
 			<plugin>
