--- a/audio/pom.xml
+++ b/audio/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>Ichos</artifactId>
 		<groupId>org.almostrealism</groupId>
-		<version>${ichos.version}</version>
+		<version>1.30</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
