--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>org.almostrealism</groupId>
 	<artifactId>Ichos</artifactId>
 	<packaging>pom</packaging>
-	<version>${ichos.version}</version>
+	<version>1.30</version>
 
     <build>
 		<plugins>
